// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Payment Form component if editing paymentMethod 1`] = `
<PaymentsForm
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`renders an AddressForm component if editing address 1`] = `
<AddressForm
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`renders an ShippingForm component if editing shippingMethod 1`] = `
<ShippingForm
  onCancel={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`renders an null Editable Form component 1`] = `null`;

exports[`renders billing info CTA if no payment method is entered 1`] = `null`;

exports[`renders empty strings if payment data is not defined 1`] = `null`;

exports[`renders name and street if shipping address is entered 1`] = `null`;

exports[`renders payment method summary if payment method entered 1`] = `null`;

exports[`renders shipping address CTA if no shipping address is entered 1`] = `null`;

exports[`renders shipping method CTA if no shipping method selected 1`] = `null`;

exports[`renders shipping title if shipping method is selected 1`] = `null`;
